# computer-graphics-from-scratch

./: .gitignore
raster/: Cargo.toml
raster/src/: main.rs
raytracer/: CMakeLists.txt  Makefile.old  main.cpp
raytracer/lib/: libSDL2-2.0.0.dylib
